--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     />
 </head>
 <body>
+  <!-- Nature -->
+  <section class="section nature">
+    <img src="img/nature-1.jpeg" title="nature-1" data-id="1" alt="" class="img">
+    <img src="img/nature-2.jpeg" title="nature-2" data-id="2" alt="" class="img">
+    <img src="img/nature-3.jpeg" title="nature-3" data-id="3" alt="" class="img">
+  </section>
+
 
     <script src="script.js"></script>
 </body>
