--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
     <img src="img/nature-2.jpeg" title="nature-2" data-id="2" alt="" class="img">
     <img src="img/nature-3.jpeg" title="nature-3" data-id="3" alt="" class="img">
   </section>
-
+  <!-- City -->
+  <section class="section city">
+    <img src="img/city-1.jpeg" alt="city-1" title="city-1" data-id="1" class="img">
+    <img src="img/city-2.jpeg" alt="city-2" title="city-2" data-id="2" class="img">
+    <img src="img/city-3.jpeg" alt="city-3" title="city-3" data-id="3" class="img">
+    <img src="img/city-4.jpeg" alt="city-4" title="city-4" data-id="4" class="img">
+    <img src="img/city-5.jpeg" alt="city-5" title="city-5" data-id="5" class="img">
+  </section>
 
     <script src="script.js"></script>
 </body>
