--- a/index.html
+++ b/index.html
@@ -27,6 +27,29 @@
     <img src="img/city-5.jpeg" alt="city-5" title="city-5" data-id="5" class="img">
   </section>
 
+  <!-- Modal -->
+  <div class="modal">
+    <button class="close-btn">
+      <i class="fas fa-times"></i>
+    </button>
+    <div class="modal-content">
+      <!-- prev next buttons -->
+      <button class="prev-btn">
+        <i class="fas fa-chevron-left"></i>
+      </button>
+      <button class="next-btn">
+        <i class="fas fa-chevron-right"></i>
+      </button>
+      <!-- content -->
+      <img src="img/city-1.jpeg" alt="" class="main-img">
+      <h3 class="image-name">Image Name</h3>
+      <div class="modal-images">
+        <img src="img/city-1.jpeg" title="city-1" id="1" alt="" class="modal-img">
+        <img src="img/city-2.jpeg" title="city-2" id="2" alt="" class="modal-img selected">
+      </div>
+    </div>
+  </div>
+
     <script src="script.js"></script>
 </body>
 </html>
